crates/math-core/tests/snapshots/wiki_test__wiki122.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\begin{matrix} x & y \\\\ z & v \\end{matrix}"
---
<math>
    <mtable displaystyle="false" scriptlevel="0">
        <mtr>
            <mtd>
                <mi>x</mi>
            </mtd>
            <mtd>
                <mi>y</mi>
            </mtd>
        </mtr>
        <mtr>
            <mtd>
                <mi>z</mi>
            </mtd>
            <mtd>
                <mi>v</mi>
            </mtd>
        </mtr>
    </mtable>
</math>
