crates/math-core/tests/snapshots/wiki_test__wiki124.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\begin{Vmatrix} x & y \\\\ z & v \\end{Vmatrix}"
---
<math>
    <mrow>
        <mo>‖</mo>
        <mtable displaystyle="true" scriptlevel="0">
            <mtr>
                <mtd>
                    <mi>x</mi>
                </mtd>
                <mtd>
                    <mi>y</mi>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mi>z</mi>
                </mtd>
                <mtd>
                    <mi>v</mi>
                </mtd>
            </mtr>
        </mtable>
        <mo>‖</mo>
    </mrow>
</math>
