crates/math-core/tests/snapshots/wiki_test__wiki129.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "f(n) = \\begin{cases} n/2, & \\text{if }n\\text{ is even} \\\\ 3n+1, & \\text{if }n\\text{ is odd} \\end{cases}"
---
<math>
    <mi>f</mi>
    <mo stretchy="false">(</mo>
    <mi>n</mi>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mrow>
        <mo>{</mo>
        <mtable>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mi>n</mi>
                    <mo lspace="0" rspace="0">/</mo>
                    <mn>2</mn>
                    <mo rspace="0">,</mo>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>if </mtext>
                    <mi>n</mi>
                    <mtext> is even</mtext>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>3</mn>
                    <mi>n</mi>
                    <mo>+</mo>
                    <mn>1</mn>
                    <mo rspace="0">,</mo>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>if </mtext>
                    <mi>n</mi>
                    <mtext> is odd</mtext>
                </mtd>
            </mtr>
        </mtable>
        <mo></mo>
    </mrow>
</math>
