crates/math-core/tests/snapshots/wiki_test__wiki140.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\frac{2}{4}=0.5\\text{ or }{2 \\over 4}=0.5"
---
<math>
    <mfrac>
        <mn>2</mn>
        <mn>4</mn>
    </mfrac>
    <mo>=</mo>
    <mn>0.5</mn>
    <mtext> or </mtext>
    <mfrac>
        <mn>2</mn>
        <mn>4</mn>
    </mfrac>
    <mo>=</mo>
    <mn>0.5</mn>
</math>
